<resources>
    <string name="app_name">News App</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_as">Continue as</string>
    <string name="google_client_id">287200452513-rvvv48fmct11jqkiontg6jkv7r7c3rrq.apps.googleusercontent.com</string>
    <string name="error_occurred">error occurred, Check intenet connection</string>
    <string name="loading">Please wait…</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">ecebaa075daf41e69330ce0378c78cec</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Log out</string>
    <string name="published_at">Published at</string>
    <string name="source">Source</string>
    <string name="facebook_app_id">2333063653474389</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="search">Search</string>
    <string name="desc">Welcom to news app, in order to get recent news you should login with facebook and
        allow us with needed permissions, Enjoy !
    </string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="local_news">Local news</string>
    <string name="recent_news">Recent news</string>
    <string name="enter_title">Enter title</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter description...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="update">Update</string>

</resources>
