<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.home.AddNewsFragment">
<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/white"
             android:gravity="center">

    <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_title"
            android:gravity="center"
            android:shadowColor="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray"
            android:textColorHighlight="@android:color/darker_gray"
            android:background="@drawable/gray_border_radius"
            android:textSize="16sp"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/seamlab_gray"
            android:layout_marginEnd="10dp"/>
    <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:maxLines="10"
            android:lines="4"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:padding="14dp"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_description"
            android:gravity="center"
            android:shadowColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textColorLink="@android:color/darker_gray"
            android:textColorHighlight="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            android:background="@drawable/gray_border_radius"
            android:textColor="@color/black"
            android:textColorHint="@color/seamlab_gray"
            android:layout_marginEnd="10dp"/>

    <Button
            android:id="@+id/btnAdd"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/AppTheme.Button.Radius"/>

</LinearLayout>
</layout>