<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<com.flipboard.bottomsheet.BottomSheetLayout
             android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.home.NewsDetailFragment">
    <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                android:fitsSystemWindows="true"
                android:background="@android:color/transparent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:fitsSystemWindows="true"
                    app:contentScrim="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                        android:id="@+id/ivNews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.3"
                        android:background="@color/black"/>
                <ImageView
                        android:id="@+id/iv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_gravity="right|top"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_share_white_24dp"
                        android:minHeight="?attr/actionBarSize"
                        android:background="@android:color/transparent"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
                android:id="@+id/fragment_team_NestedScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_below="@id/collapsing_toolbar">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:maxLines="2"
                    android:ellipsize="end"/>
            <TextView android:id="@+id/tvDetail"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="25dp"
                      android:textColor="@color/dark_gray"
                      android:textSize="15sp"
                      android:gravity="start"
                      android:lineSpacingMultiplier="1.2"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginTop="15dp">
                <FrameLayout android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content">
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical"
                                  android:layout_gravity="start">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textColor="@color/black"
                                  android:textSize="13sp"
                                  android:layout_gravity="center_horizontal"
                                  android:text="@string/published_at"
                        />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvPublishedAt"
                                android:textColor="@color/dark_gray"
                                android:textSize="10sp"
                                android:layout_marginTop="4dp"
                        />
                    </LinearLayout>

                </FrameLayout>
                <FrameLayout android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content">
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical"
                                  android:layout_gravity="end">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textColor="@color/black"
                                  android:textSize="13sp"
                                  android:layout_gravity="center_horizontal"
                                  android:text="@string/source"
                        />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvSource"
                                android:textColor="@color/dark_gray"
                                android:textSize="10sp"
                                android:layout_marginTop="4dp"
                        />
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

            <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/continue_reading"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    style="@style/AppTheme.Button.Radius"/>

        </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</com.flipboard.bottomsheet.BottomSheetLayout>
</layout>